--- a/TopDownShooter/TopDownShooter.csproj
+++ b/TopDownShooter/TopDownShooter.csproj
@@ -62,6 +62,7 @@
         <Compile Include="Entities\Hostage.cs" />
         <Compile Include="Entities\Player.cs" />
         <Compile Include="Entities\Prop.cs" />
+        <Compile Include="Entities\Shotgun.cs" />
         <Compile Include="Entities\Sprite.cs" />
         <Compile Include="Entities\StaticProp.cs" />
         <Compile Include="Form1.cs">
@@ -79,7 +80,7 @@
         <Compile Include="Interfaces\IHasCollisionRect.cs" />
         <Compile Include="Levels\GameLevel.cs" />
         <Compile Include="Levels\GameOver.cs" />
-        <Compile Include="Levels\Level1.cs" />
+        <Compile Include="Levels\LevelMansion.cs" />
         <Compile Include="Levels\LevelTestEnemies.cs" />
         <Compile Include="Levels\LevelTutorial.cs" />
         <Compile Include="Levels\MainMenu.cs" />
@@ -87,6 +88,7 @@
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="Utility\Log.cs" />
+        <Compile Include="Utility\Trace.cs" />
         <Compile Include="Utility\Vector.cs" />
         <EmbeddedResource Include="Form1.resx">
           <DependentUpon>Form1.cs</DependentUpon>
